--- a/app/views/auth/login.html
+++ b/app/views/auth/login.html
@@ -3,22 +3,22 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible"="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Farmácia</title>
-    <link rel="stylesheet" href="css/login.css" />
-
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div class="login">
-        <h1>Login</h1>
-
-        <form>
-            <input type="email" placeholder="Insira seu e-mail" id="email">
-            <input type="password" placeholder="Insira seu senha" id="senha">
-            <button type="submit">Entrar</button>
-        </form>
+    <div class="login-container">
+        <div class="login">
+            <h1>Login</h1>
+            <form>
+                <input type="email" placeholder="Insira seu e-mail" id="email">
+                <input type="password" placeholder="Insira sua senha" id="senha">
+                <button type="submit">Entrar</button>
+            </form>
+        </div>
     </div>
 </body>
 
