--- a/app/views/forms/cadastro.html
+++ b/app/views/forms/cadastro.html
@@ -5,24 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cadastro</title>
-    <link rel="stylesheet" href="css/cadastro.css" />
-
+    <title>Cadastro</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div class="cadastro">
-        <h1>Cadastra-se</h1>
-
+        <h1>Cadastre-se</h1>
         <form>
             <div class="nome-sobrenome">
                 <input type="text" placeholder="Insira seu nome" id="nome">
                 <input type="text" placeholder="Insira seu sobrenome" id="sobrenome">
             </div>
             <input type="email" placeholder="Insira seu e-mail" id="email">
-            <input type="password" placeholder="Insira seu senha" id="senha">
+            <input type="password" placeholder="Insira sua senha" id="senha">
             <input type="text" placeholder="Insira seu CPF" id="cpf">
-            <button type="submit">Cadastrar</button>
+            <button type="submit">Cadastrar-se</button>
         </form>
     </div>
 </body>
