--- a/css/inicio.css
+++ b/css/inicio.css
@@ -1,54 +1,52 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-
-* {
+body {
     font-family: "Montserrat", sans-serif;
-    padding: 0px;
-    margin: 0px;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    list-style: none;
 }
 
 .dashboard {
-    width: 100%;
-    height: 100vh;
     display: flex;
-    text-align: center;
+    height: 100vh;
 }
 
 .sidebar {
     width: 20%;
-    background-color: #264653;
-
+    background-color: #1186ad;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 20px;
 }
 
 #nome {
-    color: white;
     font-size: 30px;
     letter-spacing: 4px;
     padding: 15px;
-    background-color: #000;
+    background-color: #2A9D8F;
 }
 
-.sidebar a{
+.sidebar a {
     text-decoration: none;
     color: white;
     font-size: 18px;
     letter-spacing: 2px;
-    display: list-item;
-    padding: 20px;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
+    padding: 10px 20px;
+    transition: all 0.3s;
 }
 
-.sidebar a:hover{
+.sidebar a:hover {
     background-color: #2A9D8F;
-    transition: 0.5s;
     letter-spacing: 4px;
     text-transform: uppercase;
 }
 
 .content {
-padding: 15px;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f5f5f5;
+    padding: 20px;
 }
-
-
