FEAT: Create base dos controllers e do model

--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -6,17 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela inicial</title>
-    <link rel="stylesheet" href="css/inicio.css" />
+    <link rel="stylesheet" href="../css/inicio.css" />
 </head>
 
 <body>
     <div class="dashboard">
         <div class="sidebar">
             <h1 id="nome">Farmácia</h2>
-                <a href="#">Início</a>
-                <a href="#">Produtos</a>
-                <a href="#">Perfil</a>
-                <a href="#">Configurações</a>
+                <a href="./index.html">Início</a>
+                <a href="../forms/produtos.html">Produtos</a>
         </div>
 
         <div class="content">
