--- a/app/views/auth/login.html
+++ b/app/views/auth/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible"="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Farmácia</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/login.css">
 </head>
 
 <body>
@@ -14,8 +14,8 @@
         <div class="login">
             <h1>Login</h1>
             <form>
-                <input type="email" placeholder="Insira seu e-mail" id="email">
-                <input type="password" placeholder="Insira sua senha" id="senha">
+                <input type="email" placeholder="Insira seu e-mail" id="email" name="email" value="">
+                <input type="password" placeholder="Insira sua senha" id="senha" name="email" value="">
                 <button type="submit">Entrar</button>
             </form>
         </div>
