--- a/app/views/forms/produtos.html
+++ b/app/views/forms/produtos.html
@@ -13,8 +13,8 @@
             <div class="title-container">
                 <h1 id="nome">Farmácia</h1>
             </div>
-            <a href="#">Início</a>
-            <a href="#">Cadastre seu Remédio</a>
+            <a href="../home/index.html">Início</a>
+            <a href="./cadastromedicamento.html">Cadastre seu Remédio</a>
         </div>
 
         <div class="content">
