--- a/app/views/forms/cadastromedicamento.html
+++ b/app/views/forms/cadastromedicamento.html
@@ -16,7 +16,7 @@
     </header>
     <div class="container">
         <h2>Cadastro de novo Medicamento:</h2>
-        <form action="../../controllers/remedy/RemedyController.php" method="POST">
+        <form method="POST" action="../../controllers/remedy/RemedyController.php">
             <div class="form-group">
                 <div>
                     <label for="medicamento">Medicamento</label>
@@ -24,7 +24,7 @@
                 </div>
                 <div>
                     <label for="laboratorio">Laboratório</label>
-                    <input type="text" id="namelaboratorio" name="namelaboratorio" placeholder="Informe o laboratório">
+                    <input type="text" id="nameLaboratorio" name="nameLaboratorio" placeholder="Informe o laboratório">
                 </div>
                 <div>
                     <label for="preco">Preço Unitário</label>
