--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -15,6 +15,7 @@
             <h1 id="nome">Farmácia</h2>
                 <a href="./index.html">Início</a>
                 <a href="../forms/produtos.html">Produtos</a>
+                <a href="../forms/cadastromedicamento.html">Cadastra Remedio</a>
         </div>
 
         <div class="content">
